<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	<item android:id="@+id/test_list_preferences"
	    android:title="@string/test_list_preferences"/>
	<item android:id="@+id/test_check_preferences"
	    android:title="@string/check_preferences"/>
			
	<item android:id="@+id/test_edit_pref" android:title="@string/edit_preferences" />
	
	<item android:id="@+id/test_complex_pref" android:title="@string/complex_preferences"/>
	<item android:id="@+id/test_category_pref" android:title="@string/category_preferences" />
	<item android:id="@+id/test_child_pref" android:title="@string/child_preferences" />
	<item android:id="@+id/test_header_pref" android:title="@string/header_preferences" />

 <!--    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/> -->

</menu>
